# hne-nuclear-segmentation

./: .gitignore  Dockerfile  README.md  pyproject.toml  version.config
.cirro/: preprocess.py  process-form.json  process-input.json
.github/workflows/: bump_version.yml  ci.yml  docker.yml
nextflow/: .nf-core.yml  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  ro-crate-metadata.json
nextflow/.devcontainer/: setup.sh
nextflow/.github/: PULL_REQUEST_TEMPLATE.md
nextflow/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
nextflow/.github/workflows/: awsfulltest.yml  awstest.yml  branch.yml  fix_linting.yml
nextflow/assets/: email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  samplesheet.csv  schema_input.json  sendmail_template.txt
nextflow/conf/: base.config  modules.config  test.config  test_full.config
nextflow/docs/: CONTRIBUTING.md  README.md  output.md  usage.md
nextflow/modules/local/segment/: main.nf
nextflow/subworkflows/local/utils_nfcore_hnenucseg_pipeline/: main.nf
nextflow/tests/: default.nf.test  nextflow.config
nextflow/workflows/: hnenucseg.nf
src/hne_nuclear_segmentation/: _progress.py  cli.py  consensus.py  ellipse_decomp.py  ellipse_decomp_gmm.py  ellipse_decomp_html.py  ellipse_decomp_recursive.py  inference.py  io.py  slide.py  tiling.py  tissue.py  viz.py
src/hne_nuclear_segmentation/models/: base.py  cellpose_model.py  stardist_model.py
tests/: test_consensus.py  test_slide.py  test_tiling.py
