[project]
name = "hne-nuclear-segmentation"
version = "0.1.0"
description = "Nuclear segmentation pipeline for H&E whole-slide images using Stardist and Cellpose with consensus outputs as GeoParquet"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyvips>=2.2",
    "numpy>=1.26,<2.0",
    "scikit-image>=0.22",
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyarrow>=15",
    "typer>=0.12",
    "tqdm>=4.66",
    "stardist>=0.9",
    # On Linux (containers, CI, GPU hosts) pull the CUDA-bundled TF extra so
    # Stardist inference can use the GPU. On macOS the `[and-cuda]` extra has
    # no published wheels — fall back to plain `tensorflow` for local dev.
    "tensorflow[and-cuda]>=2.15,<2.16; sys_platform == 'linux'",
    "tensorflow>=2.15,<2.16; sys_platform != 'linux'",
    "csbdeep>=0.7",
    "cellpose>=4.0",
    "torch>=2.2",
    "zarr>=2.16,<3",
    "pillow>=10",
    "matplotlib>=3.8",
]

[project.scripts]
hne-segment = "hne_nuclear_segmentation.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "tifffile>=2024.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hne_nuclear_segmentation"]

[dependency-groups]
dev = [
    "nf-core>=4.0.2",
]
